<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="Amaranth_Bold">fonts/Amaranth_Bold.ttf</string>
    <string name="Amaranth_Regular">fonts/Amaranth_Regular.ttf</string>
    <string name="DroidSans">fonts/DroidSans.ttf</string>
    <string name="DroidSans_Bold">fonts/DroidSans_Bold.ttf</string>
    <string name="Pacifico_Regular">fonts/Pacifico_Regular.ttf</string>
    <string name="app_name">Khaleeji</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_intro_">Intro_Activity</string>
    <string name="txt_Done">Done</string>
    <string name="network_down">Please check internet connetion</string>
    <string name="imageSaved">Image Saved in</string>
    <string name="intro1_title">G-Snaps</string>
    <string name="intro1_description">Share your stories in special moments</string>
    <string name="intro2_description">Filters for Khaleejis only!</string>
    <string name="intro3_title">Live Videos</string>
    <string name="intro3_description">Share your moments, live!</string>
    <string name="intro4_title">Discover</string>
    <string name="intro4_description">Khaleeji trends, news, media, and everything \n you want, at the tip of your fingers</string>
    <string name="intro5_title">Meetup Khaleeji</string>
    <string name="intro5_description">Bringing gulf nationals  together</string>
    <string name="intro6_title">Shakhseyyat</string>
    <string name="intro6_description">Create your own avatar that TRULY looks like you</string>
    <string name="intro_button_title">GET STARTED</string>
    <string name="intro2_title">Filters</string>
    <string name="message_signin">Sign In</string>
    <string name="message_signin_ar">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="signup">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="forgotusername">Forgot Username?</string>
    <string name="message_signup">Sign Up</string>
    <string name="message_signup_ar">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="emailaddress">Email Address</string>
    <string name="mobileno">Mobile Number</string>
    <string name="verifypassword">Verify Password</string>
    <string name="alreadyhaveaccount1">Already have an account?</string>
    <string name="alreadyhaveaccount2">Sign In</string>
    <string name="fullNameBlank">Full Name is required</string>
    <string name="fullNamelength">Full Name must be less than 50 characters</string>
    <string name="Emaillength">Email address must be less than 50 characters</string>
    <string name="usernamelength">Username  must be less than 20 characters</string>
    <string name="EmailBlank">Email is required</string>
    <string name="EmailValidation">Email is not vaild</string>
    <string name="MobilenoBlank">Mobile number is required</string>
    <string name="MobileValidation">Mobile number should be at least 8 digits</string>
    <string name="usernameBlank">Username is required</string>
    <string name="passwordBlank">Password is required</string>
    <string name="verifypasswordBlanck">Verify password is required</string>
    <string name="passwordnotlong">Password shout be atleast 6 characters</string>
    <string name="passwordnotmatch">Password not matched</string>
    <string name="state_blank">State is required</string>
    <string name="currentMobilenoBlank">Current Mobile number is required</string>
    <string name="newMobilenoBlank">New Mobile number is required</string>
    <string name="confirmMobilenoBlank">Confirm  Mobile number is required</string>
    <string name="country_codenotmatch">Country code not match</string>
    <string name="confirmmobilenotmatch">Confirm Mobile Number not matched</string>
    <string name="enter_one_time">Enter your one-time password</string>
    <string name="verify">VERIFY</string>
    <string name="no_code">I didn\'t get a code</string>
    <string name="resend">Resend in</string>
    <string name="sec">sec</string>
    <string name="choose_forgetUsername">Please choose how you want to reset your UserName</string>
    <string name="choose_forgetpassword">Please choose how you want to reset your password</string>
    <string name="cancel">Cancel</string>
    <string name="viaemail">via Email</string>
    <string name="viaphone">via Phone</string>
    <string name="message_forgotpassword">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="resetpassword">Reset Password</string>
    <string name="message_forgotusername">Forgot Username</string>
    <string name="reset_password">Reset Password</string>
    <string name="Current_Password">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="password_submit">SUBMIT</string>
    <string name="chat">Chat</string>
    <string name="otp">Otp</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="newpasswordBlanck">New password is required</string>
    <string name="newpasswordnotlong">New Password should be atleast 6 characters</string>
    <string name="confirmpasswordBlanck">Confirm password is required</string>
    <string name="confimpasswordnotmatch">Password not valid</string>
    <string name="otpheader">Mobile Verify</string>
    <string name="otpdiscription">To complete signup ,please verify your phone number.\n We sent activation code to </string>
    <string name="resendotp">Resend Code</string>
    <string name="otpnotmatched">OTP not valid</string>
    <string name="otpblank">OTP is required</string>
    <string name="otpMobilediscription">To complete ,please verify your phone number.\n We sent activation link to </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="meetup">Meet Up</string>
    <string name="meetup_title">Meetup</string>
    <string name="nav_gsnap">Khaleeji-Snaps</string>
    <string name="nav_meetup">Meetup</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_myfriends">My Friends</string>
    <string name="nav_addfriends">Add Friends</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="search">Search</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="stories">Stories</string>
    <string name="about">ABOUT</string>
    <string name="info">Info</string>
    <string name="story">Story</string>
    <string name="nationaltiy">Country</string>
    <string name="bio">Bio</string>
    <string name="Gender">Gender</string>
    <string name="height">Height</string>
    <string name="eductaion">Education</string>
    <string name="hightschool">High School</string>
    <string name="university">University</string>
    <string name="currentjob">Current Job</string>
    <string name="sendrequest">Send friend request</string>
    <string name="acceptrequest">Accept Request</string>
    <string name="mystory">My Story</string>
    <string name="addstory">ADD YOUR STORY</string>
    <string name="recentstory">RECENT UPDATES</string>
    <string name="whatsstory">What\'s Live</string>
    <string name="discover">DISCOVER</string>
    <string name="minago">1 min ago</string>
    <string name="discover_live">WHAT\'S LIVE</string>
    <string name="discover_more">MORE</string>
    <string name="discover_jobs">JOBS</string>
    <string name="openedminago">opened 1 min ago</string>
    <string name="bestfreinds">BEST FRIENDS</string>
    <string name="friendrecent">RECENTS</string>
    <string name="writemessage">Enter message</string>
    <string name="friend_tab1">RECEIVED REQUESTS</string>
    <string name="friend_tab2">SENT\nREQUESTS</string>
    <string name="friend_tab3">MY\nFRIENDS</string>
    <string name="pending_friend">PENDING</string>
    <string name="suggestlinker">SUGGESTED GULF LINKERS</string>
    <string name="remove">REMOVE</string>
    <string name="seeyouranswer"> <u>See your answer</u></string>
    <string name="seeanswer"><u>See answer</u></string>
    <string name="see_answer_ar">See Answer</string>
    <string name="recviedfriendrequest">Received friend request</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="cancel_friend_request">Cancel request</string>
    <string name="nationaltiy_profile">Country</string>
    <string name="currentlocation">Current Location</string>
    <string name="Gender_profile">Gender</string>
    <string name="height_profile">Height</string>
    <string name="eductaion_profile">Education</string>
    <string name="hightschool_profile">High School</string>
    <string name="university_profile">University</string>
    <string name="bio_profile">Bio</string>
    <string name="edit">Edit</string>
    <string name="dob">DOB</string>
    <string name="profile">Profile</string>
    <string name="enter_answer_of_this_n_question">Enter answer of this question</string>
    <string name="scope_private">Private</string>
    <string name="scope_public">Public</string>
    <string name="profile_fillup">Fill up your profile to meetup with new friends</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="companyname">Company Name</string>
    <string name="bio_editprofile">Bio (write about yourself)</string>
    <string name="height_editprofile">Height (in CM)</string>
    <string name="meetup_question">Profile Suggestion Question</string>
    <string name="meetupques_hint">Meetup Question</string>
    <string name="nationaltiy_blank">Country Name is required</string>
    <string name="currentlocation_blank">Current Location is required</string>
    <string name="height_blank">Height  is required</string>
    <string name="highschool_blank">HighSchool is required</string>
    <string name="university_blank">University is required</string>
    <string name="currentjob_blank">Current job is required</string>
    <string name="meetup_question_blank">Question is required</string>
    <string name="bio_blank">Bio is required</string>
    <string name="genderrequired">Gender is Required</string>
    <string name="dobrequired">DOB is Required</string>
    <string name="please_selectcountry">Country is required</string>
    <string name="allow_othertoseeprofile">Allow users to see your Profile Picture</string>
    <string name="allow_othertoseepdob">Allow users to see your DOB</string>
    <string name="allow_othertosend">Allow users to send you Message ?</string>
    <string name="donotshowmessage">do not show message again?</string>
    <string name="searchresult1">SEARCH RESULTS</string>
    <string name="search_hint1">Search by location</string>
    <string name="tag">#Tag</string>
    <string name="names">Name</string>
    <string name="locations">Location</string>
    <string name="byhashtag">byhastag</string>
    <string name="bylocation">bylocation</string>
    <string name="byname">byname</string>
    <string name="top">Top</string>
    <string name="suggestedgulflink">SUGGESTED GULF LINKERS</string>
    <string name="send">Send</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="unfriend">Unfriend</string>
    <string name="please_enter_the_reason_to_report">Please enter the reason to report</string>
    <string name="enter_answer">enter answer</string>
    <string name="addComment">Add Comment...</string>
    <string name="Everyone">Everyone</string>
</resources>