<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/size_300"
    android:clickable="true"
    android:layout_height="@dimen/size_300"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:gravity="center"
        android:orientation="vertical">

        <CustomView.CustomTextView
            android:id="@+id/tvtitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/choose_forgetpassword"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18"
            app:customFont="@string/Amaranth_Regular" />


        <CustomView.CustomTextView
            android:id="@+id/tv_viaphone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:background="@drawable/rounded_viaemail"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/viaphone"
            android:textColor="@color/yellow_dark"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/DroidSans" />


        <CustomView.CustomTextView
            android:id="@+id/tvviaemail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:background="@drawable/rounded_viaemail"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/viaemail"
            android:textColor="@color/yellow_dark"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/DroidSans" />

        <CustomView.CustomTextView
            android:id="@+id/tvcancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/yellow_dark"
            android:textSize="@dimen/textsize_16"
            app:customFont="@string/DroidSans" />
    </LinearLayout>
</LinearLayout>
