<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <CustomView.CustomTextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:customFont="@string/DroidSans_Bold" />

        <CustomView.CustomTextView
            android:id="@+id/txt_block"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/block"
            android:textColor="@color/black"
            app:customFont="@string/DroidSans_Bold" />

        <CustomView.CustomTextView
            android:id="@+id/txt_report"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/report"
            android:textColor="@color/black"
            app:customFont="@string/DroidSans_Bold" />

        <CustomView.CustomTextView
            android:id="@+id/txt_unFriend"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:padding="8dp"
            android:visibility="gone"
            android:text="@string/unfriend"
            android:textColor="@color/black"
            app:customFont="@string/DroidSans_Bold" />

        <CustomView.CustomTextView
            android:id="@+id/txt_cancel"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:customFont="@string/DroidSans_Bold" />

    </LinearLayout>

</RelativeLayout>