<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:src="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_5"
        >


        <CustomView.CustomTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="left|center_vertical"
            android:text="@string/intro1_title"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_14"
            app:customFont="@string/DroidSans_Bold"
            android:layout_centerVertical="true"
            />

        <CustomView.CustomTextView
            android:id="@+id/tv_discription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_5"
            android:inputType="textMultiLine"
            android:text="@string/intro4_description"
            android:textColor="@color/gray"
            android:textSize="@dimen/textsize_12"
            app:customFont="@string/DroidSans"
            android:layout_toEndOf="@+id/tv_username"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            />


    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_trans"
        />

</LinearLayout>